<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <ImageView
        android:id="@+id/imgViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:clickable="false"
        android:ellipsize="end"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/letsRegister_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewLogo" />

    <TextView
        android:id="@+id/txtViewRegisterMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:minLines="1"
        android:text="@string/register_page_message"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="@dimen/_14sdp"
        app:autoSizeMinTextSize="@dimen/_12sdp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewRegisterTitle" />

    <Button
        android:id="@+id/btnAthlete"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/drawable_button_background"
        android:fontFamily="@font/adamina"
        android:text="@string/athlete_title"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewRegisterMessage"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/btnCompany"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/adamina"
        android:text="@string/company_title"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAthlete"
        app:rippleColor="@color/white" />

    <TextView
        android:id="@+id/txtViewDontHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/have_and_account_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/yellow_color"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/txtViewDontHaveAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toEndOf="@+id/txtViewDontHaveAcc"
        app:layout_constraintTop_toTopOf="@+id/txtViewDontHaveAcc"
        app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>
